chore: start removing our Task implementation