@@ -37,8 +37,10 @@ import java.lang.reflect.Type;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import lombok.NonNull;
@@ -67,13 +69,15 @@ public class NodeMessenger extends DefaultMessenger implements CloudMessenger {
   }
 
   @Override
-  public @NonNull Task<Collection<ChannelMessage>> sendChannelMessageQueryAsync(@NonNull ChannelMessage message) {
+  public @NonNull CompletableFuture<Collection<ChannelMessage>> sendChannelMessageQueryAsync(
+    @NonNull ChannelMessage message
+  ) {
     return this.sendChannelMessageQueryAsync(message, true);
   }
 
   @Override
   public @NonNull Collection<ChannelMessage> sendChannelMessageQuery(@NonNull ChannelMessage channelMessage) {
-    return this.sendChannelMessageQueryAsync(channelMessage).get(20, TimeUnit.SECONDS, Collections.emptyList());
+    return Task.get(this.sendChannelMessageQueryAsync(channelMessage), 20, TimeUnit.SECONDS, List.of());
   }
 
   public void sendChannelMessage(@NonNull ChannelMessage message, boolean allowClusterRedirect) {
@@ -98,7 +102,7 @@ public class NodeMessenger extends DefaultMessenger implements CloudMessenger {
     message.content().release();
   }
 
-  public @NonNull Task<Collection<ChannelMessage>> sendChannelMessageQueryAsync(
+  public @NonNull CompletableFuture<Collection<ChannelMessage>> sendChannelMessageQueryAsync(
     @NonNull ChannelMessage message,
     boolean allowClusterRedirect
   ) {
